refactored handlers main.yml, importing tasks

--- a/roles/pc/handlers/main.yml
+++ b/roles/pc/handlers/main.yml
@@ -1,117 +1,6 @@
-- name: config autostart desktopfile
-  tags: desktop file, config, script, autostart
-  lineinfile:
-    path: "{{ home }}/.config/autostart/modmap.desktop"
-    regexp: "^Exec"
-    line: "Exec={{ home }}/.scripts/modmap.sh"
-
-- name: setup git config
-  tags: gitconfig, config,
-  lineinfile:
-    path: "{{ home }}/.gitconfig"
-    regexp: "{{ item.regexp }}"
-    line: "{{ item.line }}"
-  with_items:
-    - { regexp: "^name", line: "name = {{ git_username }}" }
-    - { regexp: "^email", line: "email = {{ git_email }}" }
-
-- name: ensure group docker exists
-  tags: docker, group
-  group:
-    name: docker
-    state: present
-
-- name: add user to docker group
-  tags: docker, group, add user
-  user:
-    name: "{{ user }}"
-    groups: docker
-    append: yes
-
-- name: start prometheus service
-  tags: prometheus, service
-  service:
-    name: prometheus
-    state: started
-    enabled: yes
-
-- name: start docker service
-  tags: docker, service
-  service:
-    name: docker
-    state: started
-    enabled: yes
-
-- name: start prometheus-node-exporter service
-  tags: prometheus-node-exporter, service
-  service:
-    name: prometheus-node-exporter
-    state: started
-    enabled: yes
-
-- name: start grafana service
-  tags: grafana, service
-  service:
-    name: grafana
-    state: started
-    enabled: yes
-
-- name: install powerlevel10k theme
-  tags: powerlevel10k, theme, zsh
-  git:
-    repo: https://github.com/romkatv/powerlevel10k.git
-    dest: "{{ home }}/.oh-my-zsh/custom/themes/powerlevel10k"
-  notify: "{{ item }}"
-  loop:
-    - set powerlevel10k for zsh theme
-    - source custom p10k config
-    - set aliases
-
-- name: set powerlevel10k for zsh theme
-  tags: powerlevel10k, theme, zsh
-  lineinfile:
-    path: "{{ home }}/.zshrc"
-    regexp: "^ZSH_THEME="
-    line: ZSH_THEME="powerlevel10k/powerlevel10k"
-
-- name: source custom p10k config
-  tags: powerlevel10k, theme, zsh
-  lineinfile:
-    path: "{{ home }}/.zshrc"
-    line: source ~/.p10k.zsh
-
-- name: set aliases
-  tags: aliases, zsh
-  lineinfile:
-    path: "{{ home }}/.zshrc"
-    line: |
-      # aliases
-      alias ssh="kitty +kitten ssh" 
-      alias tda="todo.sh add"
-      alias td="todo.sh"
-      alias tdl="todo.sh ls"
-      alias vg="vagrant"
-      alias vgu="vagrant up"
-      alias vgp="vagrant provision"
-      alias vgh="vagrant halt"
-      alias vgd="vagrant destroy -f"
-      alias ap="ansible-playbook"
-
-- name: dynamic set ip in server prometheus.yml
-  lineinfile:
-    path: /etc/prometheus/prometheus.yml
-    regexp: "{{ item.regex }}"
-    line: "{{ item.line }}"
-    backup: true
-  loop:
-    - {
-        regex: '- targets: \[''localhost:9090''\]',
-        line: "      - targets: ['localhost:9090', '{{ ipaddr }}:9090']",
-      }
-    - {
-        regex: '- targets: \[''localhost:9100''\]',
-        line: "      - targets: ['localhost:9100', '{{ ipaddr }}:9100']"
-      }
-  delegate_to: tokyo
-
+- import_tasks: config.yml
+- import_tasks: zsh.yml
 - import_tasks: steam.yml
+- import_tasks: docker.yml
+- import_tasks: prometheus.yml
+- import_tasks: grafana.yml
