refactored become user to use dynamic variable

--- a/roles/pc/tasks/desktop_env/gnome/powersettings.yml
+++ b/roles/pc/tasks/desktop_env/gnome/powersettings.yml
@@ -1,6 +1,6 @@
 - name: gnome | power settings | sleep inactive
   tags: gnome,power settings
-  become_user: fabio
+  become_user: "{{ user }}"
   dconf:
     key: "{{ item.key }}"
     value: "{{ item.value }}"
