--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -3,6 +3,7 @@
 - include_tasks: system_setup/main.yml
 - include_tasks: desktop_env/gnome/powersettings.yml
 - include_tasks: desktop_env/gnome/keybindings.yml
+- include_tasks: desktop_env/gnome/set_wallpaper.yml
 - include_tasks: dotfiles/main.yml
 
 ## install software
