add permision for unarchive task when unzip the proton-ge

--- a/roles/pc/handlers/steam.yml
+++ b/roles/pc/handlers/steam.yml
@@ -4,8 +4,7 @@
     owner: "{{ user }}"
     group: "{{ user }}"
     state: directory
-    mode: '0764'
-
+    mode: "0764"
 
 - name: get proton-ge latest tag
   github_release:
@@ -15,7 +14,10 @@
   register: proton_ge_latest
 
 - name: install proton ge
-  ansible.builtin.unarchive:
+  unarchive:
     src: "https://github.com/GloriousEggroll/proton-ge-custom/releases/download/{{ proton_ge_latest['tag'] }}/{{ proton_ge_latest['tag']}}.tar.gz"
     dest: "{{ home }}/.steam/root/compatibilitytools.d"
     remote_src: yes
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    mode: "0764"
