--- a/roles/pc/tasks/desktop_env/gnome/keybindings.yml
+++ b/roles/pc/tasks/desktop_env/gnome/keybindings.yml
@@ -131,7 +131,14 @@
     value: "{{ item.value }}"
   with_items:
     - {
-        key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver",
-        value: "<Super>x",
+        key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver/name",
+        value: "'Screenlock'",
       }
-
+    - {
+        key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver/binding",
+        value: "'<Super>x'",
+      }
+    - {
+        key: "/org/gnome/settings-daemon/plugins/media-keys/screensaver/command",
+        value: "'xdg-screensaver lock'",
+      }
