--- a/roles/pc/handlers/zsh.yml
+++ b/roles/pc/handlers/zsh.yml
@@ -40,6 +40,9 @@
       alias ap="ansible-playbook"
       alias kl="kubectl"
       alias klcf="kubectl create -f"
+      alias klgp="kubectl get pods"
+      alias klgpv="kubectl get pv"
+      alias klgpvc="kubectl get pvc"
       alias klap="kubectl apply -f"
       alias klgp="kubectl get pods"
       alias klsc='f(){ kubectl config set-context $(kubectl config current-context) --namespace="$1";  unset -f f; }; f'
