--- a/roles/pc/tasks/system_setup/ufw.yml
+++ b/roles/pc/tasks/system_setup/ufw.yml
@@ -4,29 +4,29 @@
     state: enabled
     policy: reject
 
-- name: Allow prometheus
-  community.general.ufw:
-    rule: allow
-    port: 9090
-    proto: tcp
+# - name: Allow prometheus
+#   community.general.ufw:
+#     rule: allow
+#     port: 9090
+#     proto: tcp
 
-- name: Allow prometheus node exporter
-  community.general.ufw:
-    rule: allow
-    port: 9100
-    proto: tcp
+# - name: Allow prometheus node exporter
+#   community.general.ufw:
+#     rule: allow
+#     port: 9100
+#     proto: tcp
 
-- name: Allow glances
-  community.general.ufw:
-    rule: allow
-    port: 61208:61209
-    proto: tcp
+# - name: Allow glances
+#   community.general.ufw:
+#     rule: allow
+#     port: 61208:61209
+#     proto: tcp
 
-- name: Allow portainer agent
-  community.general.ufw:
-    rule: allow
-    port: 9001
-    proto: tcp
+# - name: Allow portainer agent
+#   community.general.ufw:
+#     rule: allow
+#     port: 9001
+#     proto: tcp
 
 - name: Allow all access from RFC1918 networks to this host
   community.general.ufw:
