--- a/roles/pc/handlers/zsh.yml
+++ b/roles/pc/handlers/zsh.yml
@@ -8,6 +8,7 @@
     - set powerlevel10k for zsh theme
     - source custom p10k config
     - set aliases
+    - set login shell to zsh
 
 - name: set powerlevel10k for zsh theme
   tags: powerlevel10k, theme, zsh
@@ -37,13 +38,25 @@
       alias vgp="vagrant provision"
       alias vgh="vagrant halt"
       alias vgd="vagrant destroy -f"
+      alias vgs="vagrant ssh"
       alias ap="ansible-playbook"
       alias kl="kubectl"
-      alias klcf="kubectl create -f"
-      alias klgp="kubectl get pods"
-      alias klgpv="kubectl get pv"
-      alias klgpvc="kubectl get pvc"
-      alias klap="kubectl apply -f"
-      alias klgp="kubectl get pods"
-      alias klsc='f(){ kubectl config set-context $(kubectl config current-context) --namespace="$1";  unset -f f; }; f'
-      alias klcn="kubectl create ns"
+      alias kcf="kubectl create -f"
+      alias kaf="kubectl apply -f"
+      alias kgp="kubectl get pods"
+      alias kgpv="kubectl get pv"
+      alias kgpvc="kubectl get pvc"
+      alias ksc='f(){ kubectl config set-context $(kubectl config current-context) --namespace="$1";  unset -f f; }; f'
+      alias kcn="kubectl create ns"
+      alias kd="kubectl describe"
+      alias kdg='f(){ kubectl describe "$1" | grep "$2";  unset -f f; }; f'
+      alias kdlf="kubectl delete -f"
+      alias kdl="kubectl delete"
+      alias r="ranger"
+      alias ta="task add"
+      alias tl="task list"
+      alias td="task done"
+      alias bt="bashtop"
+      alias pof="poweroff"
+      alias rbt="reboot"
+      alias ls="lsd"
