--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -22,7 +22,7 @@
 - import_tasks: software/netdata.yml
 - import_tasks: software/taskwarrior.yml
 - import_tasks: software/lsd.yml
-- import_tasks: software/code.yml
+#- import_tasks: software/code.yml
 - import_tasks: software/net-tools.yml
 - import_tasks: software/gnome-pop-shell.yml
 - import_tasks: software/fonts.yml
