--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -27,6 +27,7 @@
 - import_tasks: software/gnome-pop-shell.yml
 - import_tasks: software/fonts.yml
 - import_tasks: software/oh-my-zsh.yml
+- import_tasks: software/yay.yml
 # - import_tasks: software/prometheus.yml
 # - import_tasks: software/prometheus-node-exporter.yml
 # - import_tasks: software/grafana.yml
