imported brave and insomnia task

--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -28,6 +28,8 @@
 - import_tasks: software/fonts.yml
 - import_tasks: software/oh-my-zsh.yml
 - import_tasks: software/yay.yml
+- import_tasks: software/brave.yml
+- import_tasks: software/insomnia.yml
 # - import_tasks: software/prometheus.yml
 # - import_tasks: software/prometheus-node-exporter.yml
 # - import_tasks: software/grafana.yml
