import theme task on main

--- a/roles/pc/tasks/main.yml
+++ b/roles/pc/tasks/main.yml
@@ -30,6 +30,7 @@
 - import_tasks: software/yay.yml
 - import_tasks: software/brave.yml
 - import_tasks: software/insomnia.yml
+- import_tasks: software/themes.yml
 # - import_tasks: software/prometheus.yml
 # - import_tasks: software/prometheus-node-exporter.yml
 # - import_tasks: software/grafana.yml
