--- a/roles/pc/handlers/main.yml
+++ b/roles/pc/handlers/main.yml
@@ -4,3 +4,5 @@
 - import_tasks: docker.yml
 - import_tasks: prometheus.yml
 - import_tasks: grafana.yml
+- import_tasks: yay.yml
+- import_tasks: dnsmasq.yml
