add handler to install protonup

--- a/roles/pc/handlers/steam.yml
+++ b/roles/pc/handlers/steam.yml
@@ -27,3 +27,9 @@
   tags: mango hud, packages, workstation-packages
   shell:
     cmd: yay -S mangohud lib32-mangohud --noconfirm
+
+- name: install protonup
+  become_user: "{{ user }}"
+  tags: mango hud, packages, workstation-packages
+  shell:
+    cmd: yay -S protonup-qt-bin --noconfirm
